# rust-server

./: Cargo.toml  README.md  watch.sh
migrations/2020-12-17-202859_create_contacts/: down.sql  up.sql
src/: db.rs  error_handler.rs  main.rs  schema.rs
src/contacts/: mod.rs  model.rs  routes.rs
