[package]
authors = ["Daniel Vilela <dmvvilela@gmail.com>"]
edition = "2018"
name = "rust-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
chrono = {version = "0.4.19", features = ["serde"]}
diesel = {version = "1.4.4", features = ["postgres", "r2d2", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
lazy_static = "1.4.0"
listenfd = "0.3.3"
r2d2 = "0.8.9"
serde = "1.0.118"
serde_json = "1.0.60"
